[gd_scene load_steps=5 format=3 uid="uid://bo0ugvowthkvy"]

[ext_resource type="Script" path="res://Scripts/Characters/CharSelection.gd" id="1_kfh5m"]
[ext_resource type="LabelSettings" path="res://Assets/LabelSettings/Header.tres" id="2_vi2rv"]
[ext_resource type="Texture2D" uid="uid://bdj8yv17lyfro" path="res://Assets/Human/icons/human_warrior.png" id="3_c6pem"]
[ext_resource type="SpriteFrames" uid="uid://k3qdw3a2l653" path="res://Animations/Character/Excharacter/None/Animations.tres" id="4_xyg45"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kfh5m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "CHARACTER SELECTION"
label_settings = ExtResource("2_vi2rv")
horizontal_alignment = 1

[node name="SelectedCharCard" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/SelectedCharCard"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/SelectedCharCard/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_c6pem")

[node name="stats" type="VBoxContainer" parent="MarginContainer/SelectedCharCard/HBoxContainer"]
layout_mode = 2

[node name="details" type="VBoxContainer" parent="MarginContainer/SelectedCharCard/HBoxContainer"]
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MarginContainer/SelectedCharCard"]
position = Vector2(803, 333)
sprite_frames = ExtResource("4_xyg45")
animation = &"idle"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="RaceRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Race" type="Label" parent="MarginContainer/VBoxContainer/RaceRow"]
layout_mode = 2
text = "RACE: "

[node name="RaceNames" type="HBoxContainer" parent="MarginContainer/VBoxContainer/RaceRow"]
layout_mode = 2

[node name="ClassRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Class" type="Label" parent="MarginContainer/VBoxContainer/ClassRow"]
layout_mode = 2
text = "CLASS:"

[node name="ClassNames" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ClassRow"]
layout_mode = 2

[node name="ButtonStartGame" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "    START GAME    "
